수정한 파일들 커밋

--- a/report.html
+++ b/report.html
@@ -79,7 +79,7 @@
       <div class="container">
         <div class="logo">secon 후기 - 92410809 양승권</div>
         <ul class="nav">
-          <li><a href="main.html">Main</a></li>
+          <li><a href="index.html">Main</a></li>
           <li><a href="secon.html">secon</a></li>
           <li><a href="report.html">report</a></li>
           <li><a href="team.html">team</a></li>
