수정한 파일들 커밋

--- a/team.html
+++ b/team.html
@@ -95,7 +95,7 @@
         <h1>세션과 쿠키</h1>
         <p>웹 통신중 세션과 쿠키의 차이에 대하여 웹페이지를 통해 전달합니다</p>
         <h3>
-          <a href="https://midterm-ov76.vercel.app/">팀플 페이지 주소</a>
+          <a href="https://midterm-team.vercel.app/">팀플 페이지 주소</a>
         </h3>
 
         <!-- ======= 하프 라인 ======= -->
